--- a/src/partials/_header.tpl.html
+++ b/src/partials/_header.tpl.html
@@ -20,5 +20,7 @@
             </div>
         </div>
     </div>
-    <div ng-include="'partials/_menu.tpl.html'" class="side-nav mobile" ng-class="{active: menu.active}"></div>
+    <div class="side-nav-container">
+        <div ng-include="'partials/_menu.tpl.html'" class="side-nav mobile" ng-class="{active: menu.active}"></div>
+    </div>
 </div>
