Adding loading spinner to about page

--- a/src/app/views/about.tpl.html
+++ b/src/app/views/about.tpl.html
@@ -1,4 +1,7 @@
 <div class="content-panel about">
+    <div ng-show="!pages" class="loader">
+        <div><i class="fa fa-spinner fa-spin"></i></div>
+    </div>
     <tab-menu menu-items="pages" base-route="'/about'"></tab-menu>
     <div ng-repeat="page in pages" ng-if="page.active" class="content-page ng-fade">
         <div class="image" ng-if="!!page.photo">
