--- a/src/less/about.less
+++ b/src/less/about.less
@@ -32,4 +32,12 @@
             }
         }
     }
+    .loader {
+        .center-content();
+        text-align: center;
+        height: @panel-height - (@gutter-size * 2);
+        i {
+            font-size: 60px;
+        }
+    }
 }
