Adding an error banner for failed async requests

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -21,6 +21,7 @@
 //Partials
 @import '_bootstrap.less';
 @import '_header.less';
+@import '_error.less';
 @import '_experience_title.less';
 @import '_footer.less';
 @import 'form/_contact.less';
