--- a/src/app/views/about.tpl.html
+++ b/src/app/views/about.tpl.html
@@ -1,5 +1,5 @@
 <div class="content-panel about">
-    <div ng-show="!pages.length && !status.get() == 'error'" class="loader">
+    <div ng-show="!pages.length && !(status.get() == 'error')" class="loader">
         <div><i class="fa fa-spinner fa-spin"></i></div>
     </div>
     <tab-menu menu-items="pages" base-route="'/about'"></tab-menu>
