Fixing image display issue due to injection

--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -41,6 +41,7 @@
                 img {
                     max-width: 90%;
                     max-height: 90%;
+                    display: inline-block;
                 }
             }
             .back {
